--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,9 @@ jobs:
           path: /home/vsts/.cache/Cypress
           restoreKeys: cypress | $(Agent.OS) | package-lock.json
         displayName: Cache Cypress binary
+        
+      - script: npm install
+        displayName: 'Install NPM dependencies'
 
       - script: npm ci
         displayName: 'Install NPM dependencies'
